--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <link rel="apple-touch-icon" href="logo192.png" />
+    <link rel="apple-touch-icon" href="logo.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -42,7 +42,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Howard's Corner</title>
   </head>
   <body style="background-color: rgba(0, 0, 0, 0.01)">
     <noscript>You need to enable JavaScript to run this app.</noscript>
